@@ -1,9 +1,5 @@
-CFLAGS=-Wall -Wno-unused -g
-LDADD=-lrpcsvc -lm
-
-# Uncomment to build with linux-gpib
-#CFLAGS+=-DHAVE_GPIB=1
-#LDADD+=-lgpib
+CFLAGS=-Wall -Wno-unused -g $(CFLAGS_GPIB)
+LDADD=-lrpcsvc -lm $(LDADD_GPIB)
 
 PROGS=hp1630 hptopbm hptodino r5005 hp3455 hp3457 hp8656 dg535 \
       hp3488 sr620 hp603x gpsh ics8065 a6032
